[package]
name = "leanapi-lite"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "leanapi-lite"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.11"
console = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
arboard = "3"
cookie = "0.18"
anyhow = "1"
